<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_ControlWinch" Id="{2861df26-d324-4aad-9d17-5404fa9cc812}">
    <Declaration><![CDATA[TYPE ST_ControlWinch :
STRUCT
	length : LREAL;
	length_t : LREAL;
	length_tt : LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>